src/test/ui/issues/issue-31076.stderr
error[E0369]: binary operation `+` cannot be applied to type `{integer}`
  --> $DIR/typeck-issue-31076-correct-trait-impl.rs:13:13
   |
LL |     let x = 5 + 6;
   |             ^^^^^
   |
   = note: an implementation of `std::ops::Add` might be missing for `{integer}`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0369`.
